# paar

./: .gitignore  CHANGELOG.md  README.md  agent.html  agent.html.md  bridge.html  bridge.html.md  core.html  core.html.md  fasthtml.html  fasthtml.html.md  grid.html  grid.html.md  index.html  index.html.md  kernel.html  kernel.html.md  mcp.html  mcp.html.md  providers.html  providers.html.md  pyproject.toml  registry.html  registry.html.md  reprs.html  reprs.html.md  resolvers.html  resolvers.html.md  robots.txt  runtime.html  runtime.html.md  search.json  sitemap.xml  snapshot.html  snapshot.html.md  tui.html  tui.html.md
.github/workflows/: gheasy.yml
docs/superpowers/plans/: 2026-07-20-paar-live-inspector-p1.md  2026-07-20-paar-live-inspector-p2.md  2026-07-20-paar-live-inspector-p3.md  2026-07-20-paar-live-inspector-p4.md  2026-07-21-paar-exec-inline-edit-filtering.md
docs/superpowers/specs/: 2026-07-20-paar-live-inspector-design.md  2026-07-20-paar-p4-providers-design.md  2026-07-21-paar-exec-and-filtering-design.md  2026-07-23-nbs-consolidation-fastcore-design.md  2026-07-23-paar-agent-simplification-design.md
nbs/: 00_core.ipynb  01_reprs.ipynb  02_resolvers.ipynb  03_snapshot.ipynb  04_bridge.ipynb  05_fasthtml.ipynb  06_grid.ipynb  07_providers.ipynb  08_runtime.ipynb  08_tui.ipynb  09_registry.ipynb  10_agent.ipynb  11_mcp.ipynb  12_kernel.ipynb  index.ipynb  nbdev.yml
paar/: __init__.py  _modidx.py  agent.py  bridge.py  core.py  fasthtml.py  grid.py  kernel.py  mcp.py  providers.py  registry.py  reprs.py  resolvers.py  runtime.py  snapshot.py  tui.py
site_libs/bootstrap/: bootstrap-61796a25695e3e25c1376d6769e8e901.min.css
skills/paar-session/: SKILL.md
