[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paar"
dynamic = ["version"]
description = "live lazy variable inspector for python"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Karthik", email = "karthik.rajgopal@hotmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "fastcore>=2.1.3",
    "ipython>=8.39.0",
    "litesearch>=0.0.34",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-fasthtml>=0.14.9",
]

[project.urls]
Repository = "https://github.com/vedicreader/paar"
Documentation = "https://vedicreader.github.io/paar/"

[project.entry-points.nbdev]
paar = "paar._modidx:d"

[tool.nbdev]

[tool.hatch.build.targets.wheel]
packages = ["paar"]

[tool.hatch.build.targets.sdist]
include = ["/paar", "/README.md", "/pyproject.toml"]

[tool.hatch.version]
path = "paar/__init__.py"

[dependency-groups]
dev = [
    "fossick>=0.0.10",
    "koshas>=0.0.27",
    "nbdev>=3.2.2",
    "notebook>=7.6.0",
]
